security.tf
resource "aws_security_group" "websg" {
    vpc_id = aws_vpc.myvpc.id
    ingress {
        cidr_blocks = ["0.0.0.0/0"]
        description = "open http"
        from_port  = 80
        to_port = 80
        protocol = "tcp"
    }

    ingress  {
        cidr_blocks = ["0.0.0.0/0"]
        description = "open ssh"
        from_port = 22
        to_port = 22
        protocol = "tcp"
    }
    egress {
       from_port        = 0
       to_port          = 0
       protocol         = "-1"
       cidr_blocks      = ["0.0.0.0/0"]
       ipv6_cidr_blocks = ["::/0"]
       
    } 
    depends_on = [ 
        aws_vpc.myvpc
     ]
    }
